# client_server

client_/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mytcpclient.cpp  mytcpclient.h
server_/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mytcpserver.cpp  mytcpserver.h
